tests/baselines/reference/parser_continueTarget1.errors.txt
parser_continueTarget1.ts(2,3): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== parser_continueTarget1.ts (1 errors) ====
    target:
      continue target;
      ~~~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.